# sokol-rust-imgui-template

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: deploy.yml
android/lib/: Cargo.toml
android/lib/src/: lib.rs
emscripten/: build.sh  index.html  run.sh
shaders/: imgui.glsl  triangle.glsl
src/: abort_hook.rs  app.rs  imgui_sokol.rs  lib.rs  main.rs  sg_util.rs
src/shaders/: imgui_shader.rs  mod.rs  triangle_shader.rs
